Avoid line break on price in slider
Resolves: #231

--- a/assets/css/scss/components/sliders.scss
+++ b/assets/css/scss/components/sliders.scss
@@ -10,7 +10,8 @@
     position: absolute;
     top: 22px;
     font-size: .8em;
-    color:#697782;
+    color: #697782;
+    white-space: nowrap;
   }
 }
 
